[project]
name = "yadro-test"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "redis>=7.4.0",
    "pydantic>=2.13.4",
    "flask>=3.1.3",
    "dishka>=1.10.1",
    "dynaconf>=3.2.13",
    "taskiq>=0.12.4",
    "taskiq-redis>=1.2.2",
    "uvicorn>=0.47.0",
    "flask-cors>=6.0.2",
    "asgiref>=3.11.1",
    "python-dotenv>=1.2.2",
]

#[build-system]
#requires = ["uv_build>=0.9.17,<0.10.0"]
#build-backend = "uv_build"

[project.scripts]
app = "notification_service:run_app"

[project.optional-dependencies]
pytest = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-lazy-fixtures>=1.4.0",
    "pytest-mock>=3.15.1",
    "testcontainers[postgres,redis]>=4.14.2",
    "time-machine>=3.2.0",
    "aiohttp>=3.13.5",
    "pytest-xdist>=3.8.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.14",
    "ty>=0.0.38",
]

[tool.ruff]
lint.select = [
    "E", # PEP8 ошибки (например, отступы)
    "F", # Pyflakes (неиспользуемый код)
    "W", # Предупреждения
    "I", # Сортировка импортов
    "UP", # Современный Python (например, Union -> |)
]
line-length = 120
indent-width = 4

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
]
testpaths = ["tests"]
markers = [
    "unit: Unit tests for domain logic",
    "integration: Integration tests for application layer",
    "e2e: End-to-end tests for API endpoints",
    "slow: Tests that take more than 5 seconds",
    "redis: Tests that require Redis",
    "db: Tests that require database"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = [
    "ignore:.*wait_container_is_ready.*:DeprecationWarning:testcontainers.*",
]
